# aacgain

./: .git-preserve-permissions  .git-preserve-times  Makefile.am  Makefile.in  README  README.first  aacgain.spec  config.h.in  configure  configure.in  prepare.sh
aacgain/: Makefile.in  aacgain  faad2  mp3gain  mpeg4ip
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
faad2/libfaad/: Makefile.am  Makefile.in
mp3gain/: Makefile.in  gain_analysis.h
mp3gain/mpglibDBL/: Makefile.am  Makefile.in  VbrTag.h
mpeg4ip/include/: mpeg4ip.h
mpeg4ip/lib/mp4v2/: Makefile.am  Makefile.in
patches/: Makefile.am.mp3gain  faad2.patch  mp3gain.patch  mpeg4ip.patch
